[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art_assets/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://Zombie.gd" type="Script" id=2]
[ext_resource path="res://Healthbar.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 426, 0, 33, 43 )

[sub_resource type="CircleShape2D" id=2]
radius = 17.7534

[sub_resource type="CircleShape2D" id=3]
radius = 862.325

[sub_resource type="CircleShape2D" id=4]
radius = 16.9399

[sub_resource type="Animation" id=5]
resource_name = "damage"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Zombie" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 32
collision_mask = 40
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlayerHear" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHear"]
shape = SubResource( 3 )

[node name="PlayerKill" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKill"]
position = Vector2( 2.0602, 0.5437 )
shape = SubResource( 4 )

[node name="Effects" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 5 )

[node name="NoRotate" type="Node" parent="."]

[node name="Healthbar" parent="NoRotate" instance=ExtResource( 3 )]
visible = false
[connection signal="health_updated" from="." to="." method="_on_Zombie_health_updated"]
[connection signal="body_entered" from="PlayerHear" to="." method="_on_PlayerHear_body_entered"]
[connection signal="body_exited" from="PlayerHear" to="." method="_on_PlayerHear_body_exited"]
[connection signal="body_entered" from="PlayerKill" to="." method="_on_PlayerKill_body_entered"]
